# filesieve

./: README  README.md  do_test  pyproject.toml
config/: organize.yaml  sieve.conf
docs/: algorithm.md  development.md  migration.md  release.md
src/filesieve/: __init__.py  cache.py  cmd.py  exact.py  media.py  organize.py  sieve.py
test/: test_cache.py  test_exact.py  test_media.py  test_organize.py  test_sieve.py
